fixed overlapping problem with react-tabs in course

--- a/src/Toolbar/Toolbar.css
+++ b/src/Toolbar/Toolbar.css
@@ -8,6 +8,7 @@
   background-color: var(--poblue);
   color: white;
   align-items: center;
+  z-index: 50;
 }
 
 @media (min-width: 1025px) {
